# stock_trading

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
kr/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
kr/k8s/: configmap.yaml  cronjob.yaml  namespace.yaml
kr/k8s/configmaps/: trading-config.yaml
kr/k8s/cronjobs/: backtest-check.yaml  backtest-report.yaml  db-archiver.yaml  db-backup.yaml  performance-report.yaml  position-sync.yaml  screener.yaml  weekly-report.yaml
kr/k8s/deployments/: dashboard.yaml  data-ingest-us.yaml  data-ingest.yaml  order-executor.yaml  risk-manager.yaml  safety-monitor.yaml  signal-engine-us.yaml  signal-engine.yaml
kr/k8s/ingressroutes/: dashboard-ingressroute.yaml
kr/k8s/services/: services.yaml
kr/k8s/storage/: sqlite-pvc.yaml
kr/screener/: config.py  kis_client.py  main.py  notifier.py  screener.py
kr/scripts/: simulate_liquidation_proximity.py  test_telegram_commands.py
kr/src/: __init__.py
kr/src/backtest/: engine.py  tune.py
kr/src/db/: connection.py  models.py
kr/src/execution/: order_manager.py
kr/src/ingest/: kis_rest.py  kis_ws.py  main.py
kr/src/jobs/: backtest_report.py  daily_report.py  order_sync.py  performance_tracker.py  position_sync.py  screener.py
kr/src/monitoring/: dashboard.py  health.py
kr/src/risk/: drawdown_guard.py  market_hours.py  position_sizer.py
kr/src/safety/: __init__.py  safe_mode.py  safety_monitor.py
kr/src/signal/: __init__.py  main.py  main_us.py  signal_engine.py  strategy_runner.py
kr/src/utils/: config.py  startup_recovery.py
kr/tests/unit/: test_config.py  test_consecutive.py  test_cronjobs.py  test_ema_crossover.py  test_fill_listener.py  test_liquidation_guard.py  test_macd_sma200_chartart.py  test_market_shock_detector.py  test_momentum.py  test_order_manager.py  test_order_sync.py  test_position_sizer.py  test_position_tracker.py  test_safe_mode.py  test_safety_monitor.py  (+8 more)
us/: .env.example  pyproject.toml
us/config/: watchlist.yml
us/docs/: IMPLEMENTATION.md
us/tests/: test_db.py  test_risk.py  test_strategy.py
(+148 files in other folders)
