[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-trading-kr"
version = "0.1.0"
description = "KR stock autotrading system (KIS Open API)"
requires-python = ">=3.13"
dependencies = [
  "aiohttp>=3.9",
  "flask>=3.0",
  "gunicorn>=22.0",
  "werkzeug>=3.0",
  "python-dotenv>=1.0",
  "numpy>=1.26",
  "pandas>=2.0",
  "TA-Lib==0.6.8",
  "python-dateutil>=2.8",
  "python-telegram-bot>=20.7",
  "structlog>=23.2",
  "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
